Source/WebCore/css/WebKitCSSShaderValue.h
@@ -45,6 +45,9 @@ public:
     static PassRefPtr<WebKitCSSShaderValue> create(const String& url) { return adoptRef(new WebKitCSSShaderValue(url)); }
     ~WebKitCSSShaderValue();
 
+    const String& format() const { return m_format; }
+    void setFormat(const String& format) { m_format = format; }
+
     StyleCachedShader* cachedShader(CachedResourceLoader*);
     StyleShader* cachedOrPendingShader();
 
@@ -58,6 +61,7 @@ private:
     WebKitCSSShaderValue(const String& url);
 
     String m_url;
+    String m_format;
     RefPtr<StyleShader> m_shader;
     bool m_accessedShader;
 };
